--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 .header {
   display: flex;
-  background-color: rgb(50, 167, 145)
+  background-color: rgb(50, 167, 145);
 }
